--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a id="skip" href="#main-content">Skip to Main Content</a>
         <!-- styling skip links: https://webaim.org/techniques/css/invisiblecontent/ -->
         <header>
-            <a href="index.html" id="logo"><img src="C:\Users\alexi\OneDrive\Documents\almastin.github.io\wunderlust\images-20241124T230828Z-001\images\logo.png" alt="The Wunderlust logo shows blue waves and the outline of two palm trees against an orange sun"></a>
+            <a href="index.html" id="logo"><img src="C:\Users\alexi\OneDrive\Documents\almastin.github.io\wunderlustprojectcss\images-20241124T230828Z-001\images\logo.png" alt="The Wunderlust logo shows blue waves and the outline of two palm trees against an orange sun"></a>
             <h1>Wunderlust</h1>
 			<p>Let Wunderlust Travel help you plan the trip of your dreams!</p>			
             <nav>
